; ModuleID = '/home/carl/AnghaBench/reactos/dll/cpl/sysdm/extr_environment.c_GetSelectedListViewItem.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/cpl/sysdm/extr_environment.c_GetSelectedListViewItem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LVM_GETITEMCOUNT = common dso_local global i32 0, align 4
@LB_ERR = common dso_local global i64 0, align 8
@LVM_GETITEMSTATE = common dso_local global i32 0, align 4
@LVIS_SELECTED = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32)* @GetSelectedListViewItem to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @GetSelectedListViewItem(i32 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* @LVM_GETITEMCOUNT, align 4
  %8 = call i64 @SendMessage(i32 %6, i32 %7, i64 0, i32 0)
  store i64 %8, i64* %4, align 8
  %9 = load i64, i64* %4, align 8
  %10 = load i64, i64* @LB_ERR, align 8
  %11 = icmp ne i64 %9, %10
  br i1 %11, label %12, label %33

12:                                               ; preds = %1
  store i64 0, i64* %5, align 8
  br label %13

13:                                               ; preds = %29, %12
  %14 = load i64, i64* %5, align 8
  %15 = load i64, i64* %4, align 8
  %16 = icmp slt i64 %14, %15
  br i1 %16, label %17, label %32

17:                                               ; preds = %13
  %18 = load i32, i32* %3, align 4
  %19 = load i32, i32* @LVM_GETITEMSTATE, align 4
  %20 = load i64, i64* %5, align 8
  %21 = load i64, i64* @LVIS_SELECTED, align 8
  %22 = trunc i64 %21 to i32
  %23 = call i64 @SendMessage(i32 %18, i32 %19, i64 %20, i32 %22)
  %24 = load i64, i64* @LVIS_SELECTED, align 8
  %25 = icmp eq i64 %23, %24
  br i1 %25, label %26, label %28

26:                                               ; preds = %17
  %27 = load i64, i64* %5, align 8
  store i64 %27, i64* %2, align 8
  br label %34

28:                                               ; preds = %17
  br label %29

29:                                               ; preds = %28
  %30 = load i64, i64* %5, align 8
  %31 = add nsw i64 %30, 1
  store i64 %31, i64* %5, align 8
  br label %13

32:                                               ; preds = %13
  br label %33

33:                                               ; preds = %32, %1
  store i64 -1, i64* %2, align 8
  br label %34

34:                                               ; preds = %33, %26
  %35 = load i64, i64* %2, align 8
  ret i64 %35
}

declare dso_local i64 @SendMessage(i32, i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
